Pauls javascript changes

--- a/app/views/meeting/view.rhtml
+++ b/app/views/meeting/view.rhtml
@@ -13,7 +13,13 @@
       //not sure if this should go here or not
       startamount=0;
         curamount=$("startcost").firstChild.nodeValue;
-        inc_totals_at_rate(<%= @meeting.cents_per_hour / 60 %>);
+        //we could put this on the serverside??
+        onerate = 3600000/<%= @meeting.cents_per_hour %>;
+        inc = Math.ceil(1/(Math.exp(Math.log(onerate)-4)));
+        alert(inc);
+        alert(onerate*inc);
+        
+        inc_totals_at_rate(onerate*inc, inc);
       </script>
       <%= periodically_call_remote :url => { :action => "view", :id => @meeting } %>
     <% else %>
@@ -23,6 +29,5 @@
       </script>
     <% end %>
   </p>
-  
   </body>
 </html>
