--- a/app/views/meeting/view.rhtml
+++ b/app/views/meeting/view.rhtml
@@ -6,6 +6,25 @@
   
   <div style="visibility: hidden"><span id='startcost'><%= @meeting.cost%></span></div>
   
+  <!--notes -->
+  <ul>
+    <% for n in @meeting.notes %>
+    <li>
+    <%= n.descr %> -- $<%= n.cost/100 %>
+    <% if n.running? %>
+    <%= link_to "stop", { :controller => 'note', :action => "stop", :id => n}%>
+    </li>
+    <% end %>
+  <% end %>
+  </ul>
+  <%= start_form_tag :action => 'addNote' %>
+  <p>what's going on?
+  <%= text_area "newNote", "descr", "cols" => 20, "rows" => "2" %>
+  <%= hidden_field "meeting", "id"%>
+  <input type="submit" value="go"/>
+  <%= end_form_tag %></p>
+  </p>
+
   <p>
     <% if @meeting.running? %>
       <%= link_to "Stop Meeting", { :action => 'stop', :id => @meeting } %>
