--- a/app/views/meeting/view.rhtml
+++ b/app/views/meeting/view.rhtml
@@ -2,23 +2,25 @@
   <% content_for :title do%>meeting counter<% end %>
   <body>
     <h1><%= @meeting.name %></h1>
-  <p><div id="raw">0</div></p>
+  <p>Current Cost: <span id="raw">0</span></p>
   
   <div style="visibility: hidden"><span id='startcost'><%= @meeting.cost%></span></div>
   
   <!--notes -->
+  <h2>Activities</h2>
   <div id="notes"><%= render :partial => 'notes' %></div>
-
 
   <% if @meeting.running? %>
     <%= start_form_tag :action => 'addNote' %>
-    <p>what's going on?
+    <p>what's going on now?
     <%= text_area "newNote", "descr", "cols" => 20, "rows" => "2" %>
     <%= hidden_field "meeting", "id"%>
     <input type="submit" value="go"/>
     <%= end_form_tag %></p>
     </p>
+  <% end %>
 
+  <% if @meeting.running? %>
     <p>
       <%= link_to "Stop Meeting", { :action => 'stop', :id => @meeting } %>
       <script type="text/javascript">
