Updated alts, you have to reload the alt widget fixtures from the file
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@167 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -5,7 +5,7 @@
 Meeting Cost <br/><br/>
 <%= slider_stylesheet %>
 
-Name:<%= text_field :meeting, :name %>
+Name:<%= text_field :meeting, :name, :value => "my meeting" %>
 <div class="inputcontainer">
   <fieldset>
     <legend>Number of people</legend>
