--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -12,7 +12,7 @@ Name:<%= text_field :meeting, :name, :value => "my meeting" %>
     <div id='track1' class='slider'>
       <div></div>
     </div>
-    <input type="text" id="people" value="1">
+    <%= text_field :meeting, :attendance, :value => "1" %>
   </fieldset>
 </div>
 
@@ -41,7 +41,7 @@ Name:<%= text_field :meeting, :name, :value => "my meeting" %>
 <input type="hidden" id="track1value">
 <input type="hidden" id="track2value">
 <%= end_form_tag %>
-<%= slider_element 'track1', :minimum => 1, :maximum => 20,  :increment => 3, :values => "[#{(1..20).to_a.join(', ')}]", :slide => '$("track1value").value = value; $("people").value = value; $("costperhour").value = calc()', :range => 1..20, :sliderValue => 1 %>
+<%= slider_element 'track1', :minimum => 1, :maximum => 20,  :increment => 3, :values => "[#{(1..20).to_a.join(', ')}]", :slide => '$("track1value").value = value; $("meeting_attendance").value = value; $("costperhour").value = calc()', :range => 1..20, :sliderValue => 1 %>
 
 
 <%= slider_element 'track2', :minimum => 10000, :maximum => 200000,  :increment => 3, :values => (2..40).inject([]){|a,i|a << i*5000}.inspect, :slide => '$("track2value").value = value; $("salary").value = check_wage_type(value); $("costperhour").value = calc()', :range => 10000..200000, :sliderValue => 50000 %>
