Added some initial layout css and fixed the input form some.
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@172 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -11,8 +11,8 @@
 
 </head>
 <body>
-<div id="logo">Cool Logo Here</div>
-<div id="middle">
+<div id="banner">Cool Logo Here</div>
+<div id="content">
 <%= yield :layout %>
 </div> 
 <div id="footer">Footer goes here</div>
