--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -4,15 +4,19 @@
 <%= form_tag({ :action => 'save' }, :method => 'post') %>
 Meeting Cost <br/><br/>
 <%= slider_stylesheet %>
-
-Name:<%= text_field :meeting, :name, :value => "my meeting" %>
-<div class="inputcontainer">
+  <div class="inputcontainer">
+  <fieldset>
+  <legend>Name of meeting</legend>
+    <%= text_field :meeting, :name, :value => "my meeting", :size => "20" %>
+  </fieldset>
+  </div>
+  <div class="inputcontainer">
   <fieldset>
     <legend>Number of people</legend>
     <div id='track1' class='slider'>
       <div></div>
     </div>
-    <%= text_field :meeting, :attendance, :value => "1" %>
+    <%= text_field :meeting, :attendance, :value => "1", :size => "20", :onkeyup => '$("costperhour").value = calc()' %>
   </fieldset>
 </div>
 
@@ -22,7 +26,7 @@ Name:<%= text_field :meeting, :name, :value => "my meeting" %>
     <div id='track2' class='slider'>
       <div></div>
     </div>
-    <input type="text" id="salary" value="50000.00"><br />
+    <input type="text" id="salary" value="50000.00" size="20" onkeyup='$("costperhour").value = calc()'/><br />
     <input type="radio" name="wage_type" id="wage_type_annual" value="annual" checked onChange='$("salary").value = check_wage_type($("track2value").value)'/>annual
     <input type="radio" name="wage_type" value="hourly" onChange='$("salary").value = check_wage_type($("track2value").value)'/>hourly
   </fieldset>
@@ -31,7 +35,7 @@ Name:<%= text_field :meeting, :name, :value => "my meeting" %>
 <div class="inputcontainer">
   <fieldset>
     <legend>Cost per Hour</legend>
-    <input type="text" id="costperhour" value="25.00">
+    <input type="text" id="costperhour" value="25.00" size="20">
   </fieldset>
 </div>
 <%= hidden_field :meeting, :cents_per_hour %>
