--- a/app/views/meeting/view.rhtml
+++ b/app/views/meeting/view.rhtml
@@ -1,6 +1,5 @@
-<html>
   <% content_for :title do%>meeting counter<% end %>
-  <body>
+  <div id="main_content">
     <h1><%= @meeting.name %></h1>
   <p>Current Cost: <span id="raw">0</span></p>
   
@@ -13,7 +12,7 @@
   <% if @meeting.running? %>
     <%= start_form_tag :action => 'addNote' %>
     <p>what's going on now?
-    <%= text_area "newNote", "descr", "cols" => 20, "rows" => "2" %>
+    <%= text_field "newNote", "descr", :size => 20  %>
     <%= hidden_field "meeting", "id"%>
     <input type="submit" value="go"/>
     <%= end_form_tag %></p>
@@ -22,7 +21,8 @@
 
   <% if @meeting.running? %>
     <p>
-      <%= link_to "Stop Meeting", { :action => 'stop', :id => @meeting } %>
+    <%= link_to "Stop Meeting", { :action => 'stop', :id => @meeting } %>
+  </div>
       <script type="text/javascript">
       //not sure if this should go here or not
       startamount=0;
@@ -44,5 +44,3 @@
   </p>
   <div id="alternative"></div>
   <%= periodically_call_remote :url => { :controller => :alt_widget, :action => :view, :meeting_id => @meeting.id, :frequency => 15 } %>
-</body>
-</html>
