--- a/app/views/meeting/view.rhtml
+++ b/app/views/meeting/view.rhtml
@@ -1,8 +1,10 @@
   <% content_for :title do%>meeting counter<% end %>
   <div id="main_content">
     <h1><%= @meeting.name %></h1>
-    <p>Current Cost: 
+    <p>Current Cost</p>
+    <p id="current_cost"> 
       <div class="numeral" id="place6"></div>
+      <div class="decimal">,</div>
       <div class="numeral" id="place5"></div>
       <div class="numeral" id="place4"></div>
       <div class="numeral" id="place3"></div>
@@ -43,7 +45,7 @@
     now = new Date();
     roll(cents_per_hour, now.getTime(), <%= @meeting.cost %>);
       </script>
-      <!-- periodically_call_remote :url => { :action => "view", :id => @meeting } % -->
+      <%= periodically_call_remote :url => { :action => "update_notes", :id => @meeting } %> 
     <% else %>
       <script type="text/javascript"> 
         set(<%= @meeting.cost %>);
