show logo and add styling, styling is still very much a work in progress
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@238 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -8,10 +8,9 @@
   <!-- we still dont have these yet-->
   <%= stylesheet_link_tag("application") %>
   <%= javascript_include_tag(:defaults) %>
-
+  <%= yield :head %>
 </head>
 <body>
-<div id="banner">Cool Logo Here</div>
 <div id="content">
 <%= yield :layout %>
 </div> 
