--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,9 +1,58 @@
 body {
-  width: 720px
+  background: #d5a708;
+  background-image: url(/images/logo.png);
+  background-repeat: no-repeat;
+  background-position: 0px 10px;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
 }
-.banner {
-  width: 720px;
+
+h2 {
+  font-size: 2em;
+  font-family: Georgia, Times, serif;
+  font-style: italic;
+  color: #413819;
+  border-bottom: 2px solid #413819;
+  width: 440px;
+  margin-bottom: 20px;
+  letter-spacing: 1px;
 }
+
+h3 {
+  text-align: center;
+  font-family: Verdana, sans-serif;
+  color: #4f4f4f;
+  letter-spacing: 1px;
+}
+
+#content {
+  margin-top: 203px;
+  margin-left: 20px;
+}
+
+#form_box {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: white;
+  width: 90%;
+  border: 2px solid #413819;
+}
+
+#left_form{
+  float: left;
+  margin-left: 40px;
+}
+#right_form{
+  float: right;
+  margin-right: 40px;
+}
+
+#form_buttons{
+  clear: both;
+  text-align: center;
+}
+  
 
 #footer {
   clear: both;
