--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -4,13 +4,35 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title><%= yield :title %></title>
-  
-  <!-- we still dont have these yet-->
   <%= stylesheet_link_tag("application") %>
   <%= javascript_include_tag(:defaults) %>
+  <%= javascript_include_tag("rounded_corners.inc.js") %>
+  <script type="text/JavaScript">
+
+    window.onload = function()
+    {
+      settings = {
+        tl: { radius: 20 },
+        tr: { radius: 20 },
+        bl: { radius: 20 },
+        br: { radius: 20 },
+        antiAlias: true,
+        autoPad: false
+      }
+      var divObj = $('main_box');
+      var cornersObj = new curvyCorners(settings, divObj);
+      cornersObj.applyCornersToAll();
+    }
+
+  </script>
+  
   <%= yield :head %>
 </head>
 <body>
+<div id="user_menu">
+  <%= link_to "Login!", :controller => 'account', :action => 'login' unless logged_in? -%>
+  <%= link_to "Signup!", :controller => 'account', :action => 'signup' unless logged_in? -%>
+</div>
 <div id="content">
 <%= yield :layout %>
 </div> 
