--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -31,7 +31,13 @@ h3 {
   margin-left: 20px;
 }
 
-#form_box {
+#current_cost {
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%;
+}
+
+#main_box {
   margin-top: 40px;
   margin-bottom: 40px;
   background-color: white;
@@ -61,6 +67,10 @@ h3 {
 #main_content {
   width: 450px;
   float: left;
+}
+
+#user_menu {
+  text-align: right;
 }
 
 #alternative {
