--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,7 +1,18 @@
+/*
+ * possible colors:
+ *
+ * #643E23 #B95E00 #E69F1B #FFF0BA #6DAD50
+ * #201B27 #697662 #7BB5A0 #C2DEC5 #95AB82
+ * #115345 #466516 #F5CC00 #FFFFA6 #A88400
+ *
+ */
+
 body {
   background: #d5a708;
-  background-image: url(/images/logo.png);
-  background-repeat: no-repeat;
+  /*background-image: url(/images/logo.png);
+  background-repeat: no-repeat;*/
+  background-image: url(/images/background_gradient.png);
+  background-repeat: repeat-x;
   background-position: 0px 10px;
   padding: 0px;
   margin: 0px;
@@ -15,7 +26,8 @@ h2 {
   color: #413819;
   border-bottom: 2px solid #413819;
   width: 440px;
-  margin-bottom: 20px;
+  margin-top: 254px;
+  margin-bottom: 40px;
   letter-spacing: 1px;
 }
 
@@ -26,8 +38,12 @@ h3 {
   letter-spacing: 1px;
 }
 
+#logo {
+  margin-top: 10px;
+}
+
 #content {
-  margin-top: 203px;
+  margin-top: -80px;
   margin-left: 20px;
 }
 
@@ -38,7 +54,6 @@ h3 {
 }
 
 #main_box {
-  margin-top: 40px;
   margin-bottom: 40px;
   background-color: white;
   width: 90%;
@@ -71,6 +86,7 @@ h3 {
 
 #user_menu {
   text-align: right;
+  margin-top: -230px;
 }
 
 #alternative {
