--- a/app/views/account/signup.rhtml
+++ b/app/views/account/signup.rhtml
@@ -12,5 +12,6 @@
 <p><label for="password_confirmation">Confirm Password</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
+<%= hidden_field :invite, :token -%>
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
