--- a/app/views/account/signup.html.erb
+++ b/app/views/account/signup.html.erb
@@ -1,3 +1,5 @@
+<h2>Join Meetronome!</h2>
+<div id='main_box'>
 <%= error_messages_for :user %>
 <% form_for :user do |f| -%>
 <p><label for="login">Login</label><br/>
@@ -15,3 +17,4 @@
 <%= hidden_field :invite, :token -%>
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
+</div>
