--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         bl: { radius: 20 },
         br: { radius: 20 },
         antiAlias: true,
-        autoPad: false
+        autoPad: true
       }
       var divObj = $('main_box');
       var cornersObj = new curvyCorners(settings, divObj);
