--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -1,3 +1,5 @@
+<h2>Please Log in!</h2>
+<div id="main_box">
 <% form_tag do -%>
 <p><label for="login">Login</label><br/>
 <%= text_field_tag 'login' %></p>
@@ -12,3 +14,4 @@
 
 <p><%= submit_tag 'Log in' %></p>
 <% end -%>
+</div>
