--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,34 +1,31 @@
 /*
- * possible colors:
+ * palatte
  *
- * #643E23 #B95E00 #E69F1B #FFF0BA #6DAD50
- * #201B27 #697662 #7BB5A0 #C2DEC5 #95AB82
- * #115345 #466516 #F5CC00 #FFFFA6 #A88400
+ * #d49a2f white #551f00 #be2000 #e2d5c4
  *
  */
 
+
 body {
-  background: #d5a708;
-  /*background-image: url(/images/logo.png);
-  background-repeat: no-repeat;*/
-  background-image: url(/images/background_gradient.png);
+  background-image: url(/images/background.png);
   background-repeat: repeat-x;
-  background-position: 0px 10px;
   padding: 0px;
   margin: 0px;
   border: 0px;
 }
 
+
 h2 {
-  font-size: 2em;
+  font-size: 1.8em;
   font-family: Georgia, Times, serif;
   font-style: italic;
-  color: #413819;
-  border-bottom: 2px solid #413819;
+  color: #551f00;
+  border-bottom: 2px solid #551f00;
   width: 440px;
-  margin-top: 254px;
   margin-bottom: 40px;
   letter-spacing: 1px;
+  margin-top: 0px;
+  margin-left: 50px;
 }
 
 h3 {
@@ -38,27 +35,28 @@ h3 {
   letter-spacing: 1px;
 }
 
-#logo {
-  margin-top: 10px;
+#content {
+  background-image: url(/images/middle.png);
+  background-repeat: repeat-y;
+  width: 830px;
 }
 
-#content {
-  margin-top: -80px;
-  margin-left: 20px;
+#main_box {
+  width: 820px;
+  margin-left: 10px;
+}
+
+#footer {
+  width: 810px;
+  font-size: .8em;
+  font-family: Verdana, sans;
+  text-align: right;
 }
 
 #current_cost {
   margin-right: auto;
   margin-left: auto;
   width: 50%;
-}
-
-#main_box {
-  margin-bottom: 40px;
-  background-color: white;
-  width: 90%;
-  border: 2px solid #413819;
-  padding-left: 20px;
 }
 
 #left_form{
@@ -75,19 +73,13 @@ h3 {
   text-align: center;
 }
   
-
-#footer {
-  clear: both;
-}
-
 #main_content {
   width: 450px;
   float: left;
 }
 
 #user_menu {
-  text-align: right;
-  margin-top: -230px;
+  float: right;
 }
 
 #alternative {
