--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -9,9 +7,9 @@
   <%= yield :head %>
 </head>
 <body>
-  <div id="header">
-    <%= image_tag("header.png") %>
-  </div>
+  <!-- there is a stupid IE bug that requires the image and the div all to be on one line, if there
+  is a carriage return between then, IE6 will display a gap after the image -->
+  <div id="header"><%= image_tag("header.png") %></div>
   <div id="content">
     <div id="user_menu">
       <%= link_to "Login!", :controller => 'account', :action => 'login' unless logged_in? -%>
