--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title><%= yield :title %></title>
   <%= stylesheet_link_tag("application") %>
   <%= javascript_include_tag(:defaults) %>
+  <link rel="shortcut icon" href="/images//favicon.ico" type="image/vnd.microsoft.icon"/>
+  <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon"/> 
   <%= yield :head %>
 </head>
 <body>
