--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,7 +1,7 @@
 /*
  * palatte
  *
- * #d49a2f white #551f00 #be2000 #e2d5c4
+ * #d49a2f(orange) white #551f00(brown) #be2000(red) #e2d5c4(tan)
  *
  */
 
@@ -9,7 +9,7 @@
 body {
   background-image: url(/images/background.png);
   background-repeat: repeat-x;
-  font-family: Verdana, Times;
+  font-family: Verdana, sans-serif;
   padding: 0px;
   margin: 0px;
   border: 0px;
@@ -21,7 +21,7 @@ h2 {
   font-family: Georgia, Times, serif;
   font-style: italic;
   color: #551f00;
-  border-bottom: 2px solid #551f00;
+  border-bottom: 2px solid #e2d5c4;
   width: 440px;
   margin-bottom: 40px;
   letter-spacing: 1px;
@@ -30,10 +30,34 @@ h2 {
 }
 
 h3 {
-  text-align: center;
   font-family: Verdana, sans-serif;
-  color: #4f4f4f;
+  color: #be2000;
   letter-spacing: 1px;
+}
+
+input {
+  border: 1px solid #d49a2f;
+  background: #e2d5c4;
+  padding-left: 3px;
+  color: #551f00;
+  
+}
+
+a {
+  color: #551f00;
+}
+
+fieldset {
+  color: #551f00;
+  border: 1px solid #551f00;
+  margin-bottom: 10px;
+  width: 330px;
+  background: url(/images/fieldset.png) repeat-x scroll center bottom;
+}
+
+legend {
+  font-size: 1em;
+  color: #551f00;
 }
 
 #content {
@@ -44,7 +68,7 @@ h3 {
 
 #main_box {
   width: 780px;
-  margin-left: 40px;
+  margin-left: 50px;
   padding-bottom: 10px;
 }
 
@@ -66,12 +90,18 @@ h3 {
 }
 #right_form{
   float: right;
-  margin-right: 40px;
+  margin-right: 155px;
 }
 
 #form_buttons{
   clear: both;
-  text-align: center;
+  text-align: right;
+  margin-right: 36px;
+  padding-top: 10px;
+}
+#form_buttons input {
+  border: none;
+  background: white;
 }
   
 #main_content {
@@ -81,6 +111,7 @@ h3 {
 
 #user_menu {
   float: right;
+  margin-right: 20px;
 }
 
 #alternative {
@@ -107,4 +138,22 @@ div.inputcontainer {
 	width: 12px;
 	float: left;
 	font-size: 36px;
+}
+
+div.slider {
+  background: #e2d5c4 none repeat scroll 0%;
+  height:5px;
+  margin-bottom:10px;
+  margin-top:5px;
+  position:relative;
+  width:150px;
+}
+
+div.slider div {
+  background: #be2000 none repeat scroll 0%;
+  border:1px outset white;
+  height:15px;
+  margin-top:-5px;
+  position:absolute;
+  width:8px;
 }
