--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,6 +10,7 @@ body {
   background-image: url(/images/background.png);
   background-repeat: repeat-x;
   font-family: Verdana, sans-serif;
+  font-size: .98em;
   padding: 0px;
   margin: 0px;
   border: 0px;
@@ -31,13 +32,13 @@ h2 {
 
 h3 {
   font-family: Verdana, sans-serif;
-  color: #be2000;
+  color: #be5843;
   letter-spacing: 1px;
 }
 
 input {
-  border: 1px solid #d49a2f;
-  background: #e2d5c4;
+  border: 1px solid #ba8729;
+  background: #e2d9ce;
   padding-left: 3px;
   color: #551f00;
   
@@ -150,7 +151,7 @@ div.slider {
 }
 
 div.slider div {
-  background: #be2000 none repeat scroll 0%;
+  background: #be5843 none repeat scroll 0%;
   border:1px outset white;
   height:15px;
   margin-top:-5px;
