#9 white bg for input
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@275 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -38,7 +38,7 @@ h3 {
 
 input {
   border: 1px solid #ba8729;
-  background: #e2d9ce;
+  background: white;
   padding-left: 3px;
   color: #551f00;
   
