--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -2,7 +2,7 @@
 <%= error_messages_for 'meeting' %>
 <div id="main_box">
   <h3>Tell us about your meeting</h3>
-  <% form_tag({ :action => 'save' }, :method => 'post') do -%>
+  <% form_tag({ :action => 'save' }, :method => 'post', :id => "costcalc") do -%>
   <div id="left_form">
     <div class="inputcontainer">
       <fieldset>
@@ -45,8 +45,8 @@
     <%= slider_element 'track1', :minimum => 1, :maximum => 20,  :increment => 3, :values => "[#{(1..20).to_a.join(', ')}]", :slide => '$("track1value").value = value; $("meeting_attendance").value = value; $("costperhour").value = MC.calc()', :range => 1..20, :sliderValue => 1 %>
     <%= slider_element 'track2', :minimum => 10000, :maximum => 200000,  :increment => 3, :values => (2..40).inject([]){|a,i|a << i*5000}.inspect, :slide => '$("track2value").value = value; $("salary").value = MC.check_wage_type(value); $("costperhour").value = MC.calc()', :range => 10000..200000, :sliderValue => 50000 %>
   </div>
-  <div id="form_buttons">
-    <%= image_submit_tag "start.png", :alt => "Start Meeting", :onclick => "$('meeting_cents_per_hour').value = $('costperhour').value * 100"%>
+  <div id="form_buttons" class="clear">
+    <%= link_to_function content_tag(:span, "Start Meeting"), "$('costcalc').submit(0)", :onclick=>"this.blur;$('meeting_cents_per_hour').value = $('costperhour').value * 100", :class=>"button" -%>
   </div>
   <% end -%>
 </div>
