change colors on input
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@281 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -37,7 +37,7 @@ h3 {
 }
 
 input {
-  border: 1px solid #ba8729;
+  border: 1px solid #be5843;
   background: white;
   padding-left: 3px;
   color: #551f00;
@@ -189,7 +189,7 @@ div.slider {
 }
 
 div.slider div {
-  background: #be5843 none repeat scroll 0%;
+  background: #d49a2f none repeat scroll 0%;
   border:1px outset white;
   height:15px;
   margin-top:-5px;
