change sliders back to pink
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@282 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -189,7 +189,7 @@ div.slider {
 }
 
 div.slider div {
-  background: #d49a2f none repeat scroll 0%;
+  background: #be5843 none repeat scroll 0%;
   border:1px outset white;
   height:15px;
   margin-top:-5px;
