--- a/app/views/account/signup.html.erb
+++ b/app/views/account/signup.html.erb
@@ -1,20 +1,22 @@
 <h2>Join Meetronome!</h2>
 <div id='main_box'>
-<%= error_messages_for :user %>
 <% form_for :user do |f| -%>
 <p><label for="login">Login</label><br/>
-<%= f.text_field :login %></p>
+<%= f.text_field :login %>
+<%= error_message_on "user", "login" %>
+</p>
 
 <p><label for="email">Email</label><br/>
-<%= f.text_field :email %></p>
+<%= f.text_field :email %>
+<%= error_message_on "user", "email" %></p>
 
 <p><label for="password">Password</label><br/>
-<%= f.password_field :password %></p>
+<%= f.password_field :password %>
+<%= error_message_on "user", "password" %></p>
 
 <p><label for="password_confirmation">Confirm Password</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
-<%= hidden_field :invite, :token -%>
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
 </div>
