--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
   <div id="header"><%= image_tag("header.png") %></div>
   <div id="content">
     <div class="clear" id="user_menu" >
-      <%= link_to(content_tag(:span, "Login"), {:controller => 'account', :action => 'login'}, :class => "button") unless logged_in? -%>
-      <%= link_to(content_tag(:span, "Signup"), {:controller => 'account', :action => 'signup'}, :class=>"button") unless logged_in? -%>
+      <%= meet_link_to("Login", {:controller => 'account', :action => 'login'}) unless logged_in? -%>
+      <%= meet_link_to("Signup", {:controller => 'account', :action => 'signup'}) unless logged_in? -%>
+      <%= meet_link_to("Logout", {:controller=> 'account', :action => 'logout'}) if logged_in?%>
     </div>
     <%= yield :layout %>
   </div> 
