--- a/app/views/meeting/view.html.erb
+++ b/app/views/meeting/view.html.erb
@@ -25,7 +25,7 @@
     <%= text_field "newNote", "descr", :size => 20  %>
     <%= hidden_field "meeting", "id"%>
     <div class="clear">
-      <%= link_to_function content_tag(:span, "Go"), "$('note_form').submit(0)", :onclick=>"this.blur;", :class=>"button" -%>
+      <%= meet_link_to_function "Go", "$('note_form').submit(0)" -%>
     </div>
   </p>
   <% end %>
@@ -35,7 +35,7 @@
   <% if @meeting.running? %>
 
   <div class="clear">
-    <%= link_to content_tag(:span, "Stop Meeting"), { :action => 'stop', :id => @meeting }, :class=>"button" if session[:owner] -%>
+    <%= meet_link_to "Stop Meeting", { :action => 'stop', :id => @meeting } if session[:owner] -%>
   </div>
 
   <script type="text/javascript">
